# Verbe_irregulier

./: README.rst  pyproject.toml  verbes_irreg.py
.github/workflows/: python-publish.yml
script/: __main__.py
script/src/: liste_1.txt  liste_2.txt
verbe_irreg/: __main__.py  games_mode.py  load_list.py  menu.py
verbe_irreg.egg-info/: PKG-INFO  SOURCES.txt  entry_points.txt  top_level.txt
verbe_irreg/data/: liste_5.txt  liste_quentin.txt
verbe_irreg/src/: liste_6.txt
